config for darwin, test on MacOS 12.6.3

--- a/examples/BUILD
+++ b/examples/BUILD
@@ -2,7 +2,9 @@ cc_binary(
     name = "cblas_daxpy",
     srcs = ["cblas_daxpy.cpp"],
     linkopts = select({
+        "@bazel_tools//src/conditions:darwin": [],
         "@bazel_tools//src/conditions:linux": ["-lpthread"],
+        "@bazel_tools//src/conditions:windows": [],
     }),
     deps = ["@openblas"],
 )
